apply toList under app/src/main.